******

    gnome-mplayer is currently in a heavy state of changes 
    
    Known broken items
    
    DVD w/o menu playback
    TV playback
    
    Keyboard shortcuts

******


Development
    When restarting player, do not emit events
    Fix fallback to alternate protocols on error, fixes web playback
    Fix window size issue when opening details with non-standard window size
    Make audio meter work in GTK3 mode
    Make audio meter work in GTK2 mode
    Remove some IdleData properties
    Make Details display correct data
    Update tracker label on media change
    Remove allocate_fixed_callback
    Fix crash when setting preferences when no file is loaded
    Make extra opts work
    Fix preference setting
    Make DVD playback from ISO and Folders work
    Bring set_gui_state back, as it is needed for RealPlayer emulation
    Output notification when using old Mplayer on every startup
    Screenshot capture notification
    Make setting the media attributes a common function
    Enable deinterlacing
    Make disable upscaling work
    Fix Cancel/Close button layout in pref and adv dialog
    Make Pref/Next buttons appear when file has chapters
    Make Advanced video settings work
    Disable DVD w/o menu for now. 
    Playlist and Cache Percentage changes
    Fix memory leak in gmtk_media_player set_attribute_string
    More subtitle work
    Make audio track and subtitle selection menus work
    Activate/Deactivate subtitle visibility,delay,size menus based on if subs exist or not
    Fix resize issues with normal, double and half sizes
    Move menu updates from resize_window, make the gui change based on media state
    Move GUI updates from set_gui_state, make the gui change based on media state
    Fix state tracking
    Fix DVD menu selection
    Make playlists work
    Make enhanced subtitles work
    Add many attributes to gmtk_media_player
    Replace send_command with dummy function, until conversion is complete